# dontcrushme-rs

./: Cargo.toml  build.rs
src/: lib.rs  sif_vectorizer.rs
