[package]
name = "nlp-rs"
version = "0.1.0"
authors = ["Joseph Catrambone <jo.jcat@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.3.2"
hashbrown = "0.7.0"
nalgebra = "0.18"
typenum = "1.11.2"